samples/_failures_safe/1761480058_04c7cf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c9b7d0e.c: In function ‘main’:
./samples/SAFE/__tmp_3c9b7d0e.c:151:5: error: expected declaration or statement at end of input
  151 |     if (!matrix_input(&mat1)) {
      |     ^~
./samples/SAFE/__tmp_3c9b7d0e.c:151:5: error: expected declaration or statement at end of input
